--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="navbar">
             <a href="https://teamphoenixweb.github.io/Home/" class="home">Home</a>
             <a href="https://teamphoenixweb.github.io/History-of-TeamPhoenix/" class="history">History of TeamPhoenix</a>
-            <a href="#" class="player"> player Properties</a>
-            <a href="#" class="rules"> Rules</a>
+            <a href="https://teamphoenixweb.github.io/Player-Properties/" class="player"> player Properties</a>
+            <a href="https://teamphoenixweb.github.io/Rules/" class="rules"> Rules</a>
             <a href="#" class="medal"> Medal</a>
             <a href="#" class="social"> Social</a>
           </div>
