--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="https://teamphoenixweb.github.io/Player-Properties/" class="player"> player Properties</a>
             <a href="https://teamphoenixweb.github.io/Rules/" class="rules"> Rules</a>
             <a href="https://teamphoenixweb.github.io/Medal/" class="medal"> Medal</a>
+            <a href="https://teamphoenixweb.github.io/TeamPhoenix-Class/" class="class">class</a>
             <a href="#" class="social"> Social</a>
           </div>
     </body>
