--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="https://teamphoenixweb.github.io/Rules/" class="rules"> Rules</a>
             <a href="https://teamphoenixweb.github.io/Medal/" class="medal"> Medal</a>
             <a href="https://teamphoenixweb.github.io/TeamPhoenix-Class/" class="class">class</a>
-            <a href="#" class="social"> Social</a>
+            <a href="https://teamphoenixweb.github.io/TeamPhoenix-Social/" class="social"> Social</a>
           </div>
     </body>
 </html>
