--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
             <a href="https://teamphoenixweb.github.io/Player-Properties/" class="player"> player Properties</a>
             <a href="https://teamphoenixweb.github.io/Rules/" class="rules"> Rules</a>
             <a href="https://teamphoenixweb.github.io/Medal/" class="medal"> Medal</a>
-            <a href="https://teamphoenixweb.github.io/TeamPhoenix-Class/" class="class">class</a>
-            <a href="https://teamphoenixweb.github.io/TeamPhoenix-Social/" class="social"> Social</a>
+            <a href="https://teamphoenixweb.github.io/TeamPhoenix-Class/" class="class">Class</a>
+            <a href="https://teamphoenixweb.github.io/TeamPhoenix-Social/" class="social">social</a>
+          </div>
+          <div class="main">
+            
           </div>
     </body>
 </html>
