--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     </head>
     <body>
         <div class="head">
-            <h1>Medal</h1>
-            <p> TeamPhoenix count down medal</p>
+            <img class="titleimg" src="title.png">
+            <h1>TeamPhoenix freestyle professinal skate team</h1> 
+            <p> InlineFreestyle skate Team</p>
         </div>
         <div class="navbar">
             <a href="https://teamphoenixweb.github.io/Home/" class="home">Home</a>
